--- a/Insurance-app-main/src/Components/Dashboard/Userdata.css
+++ b/Insurance-app-main/src/Components/Dashboard/Userdata.css
@@ -1,172 +1,224 @@
-.admin-slidebar{
-  background:rgb(239, 238, 238);
-  height:100%;
+.admin-slidebar {
+  background: rgb(239, 238, 238);
+  height: 100vh;
   width: 20%;
   position: fixed;
   left: 0;
   top: 9%;
 }
 
-.userdata-container{
+.userdata-container {
   margin-left: 20%;
-  height: 100vh; 
+  height: 100vh;
 }
 
-.userdata-btn{
-cursor: pointer;
-background: none;
-border: none;
-font-size: 18px;
-width: 100%;
-padding: 7px;
-gap: 20px;
+.userdata-btn {
+  cursor: pointer;
+  background: none;
+  border: none;
+  font-size: 18px;
+  width: 100%;
+  padding: 7px;
+  gap: 20px;
 }
 
-.userdata-container{
-  overflow-y: scroll;
-}
-
-.user-list{
+.user-list {
   list-style: none;
 }
 
-.dashboard-icon:hover{
+.dashboard-icon:hover {
   font-size: 20px;
-  color:rgb(2, 2, 70);
+  color: rgb(2, 2, 70);
   font-weight: bold;
 }
 
-.user-profile .userheader{
+.user-profile .userheader {
   position: absolute;
   left: 20%;
   letter-spacing: 2px;
   color: goldenrod;
   font-variant: small-caps;
-  font-size:2rem ;
+  font-size: 2rem;
 }
 
-.user-profile .userheader .caps{
+.user-profile .userheader .caps {
   font-weight: bold;
   color: rgb(2, 2, 73);
   font-size: 2.2rem;
 }
 
-.user-profile{
-background-color: rgb(239, 238, 238);
-}
-
-.userlogout-btn .logo{
-font-size: 30px;
-color:#023265 ;
-cursor: pointer;
-}
-
-.userlogout-btn .logoutbutton{
-font-size: 30px;
-color: darkred;
-cursor: pointer;
-}
-
-.user-profile .username{
-font-size: 23px;
-}
-
-.user-list .dashboardicons{
-font-size: 30px;
-color: black;
-cursor: pointer;
-}
-
-@media screen and  (max-width: 768px) {
-.admin-slidebar{
-  background:rgb(239, 238, 238);
-  height:100%;
-  width: 10%;
-  position: fixed;
+.user-profile {
+  background-color: rgb(239, 238, 238);
+  top: 0;
   left: 0;
-  top: 9%;
 }
 
-.userdata-container{
-  margin-left: 10%;
-  height: 100vh; 
+.userlogout-btn .logo {
+  font-size: 30px;
+  color: #023265;
+  cursor: pointer;
 }
 
-.userdata-btn{
-cursor: pointer;
-background: none;
-border: none;
-font-size: 16px;
-padding: 7px;
-gap: 20px;
-position: relative;
-right: 100%;
+.userlogout-btn .logoutbutton {
+  font-size: 30px;
+  color: darkred;
+  cursor: pointer;
 }
 
-.dashboard-icon{
-display: none;
+.menu-btn{
+  font-size: 30px;
+  cursor: pointer;
 }
 
-.userdata-head{
-display: none;
+.user-profile .username {
+  font-size: 23px;
 }
 
-.userdata-container{
-  overflow-y: scroll;
+.user-list .dashboardicons {
+  font-size: 30px;
+  color: black;
+  cursor: pointer;
 }
 
-.user-list{
-  list-style: none;
+.sidebarmenu-btn{
+  border: none;
+  display: none;
 }
 
-.dashboard-icon:hover{
-  font-size: 20px;
-  color:rgb(2, 2, 70);
-  font-weight: bold;
+/* @media screen and (max-width: 768px) {
+  .admin-slidebar {
+    background: rgb(239, 238, 238);
+    height: 100%;
+    width: 10%;
+    position: fixed;
+    left: 0;
+    top: 9%;
+  }
+
+  .userdata-container {
+    margin-left: 10%;
+    height: 100vh;
+  }
+
+  .userdata-btn {
+    cursor: pointer;
+    background: none;
+    border: none;
+    font-size: 16px;
+    padding: 7px;
+    gap: 20px;
+    position: relative;
+    right: 100%;
+  }
+
+  .dashboard-icon {
+    display: none;
+  }
+
+  .userdata-head {
+    display: none;
+  }
+
+  .user-list {
+    list-style: none;
+  }
+
+  .dashboard-icon:hover {
+    font-size: 20px;
+    color: rgb(2, 2, 70);
+    font-weight: bold;
+  }
+
+  .user-profile .userheader {
+    position: absolute;
+    left: 10%;
+    letter-spacing: 2px;
+    color: goldenrod;
+    font-variant: small-caps;
+    font-size: 1.5rem;
+  }
+
+  .user-profile .userheader .caps {
+    font-weight: bold;
+    color: rgb(2, 2, 73);
+    font-size: 2rem;
+  }
+
+  .user-profile {
+    background-color: rgb(239, 238, 238);
+  }
+
+  .userlogout-btn .logo {
+    font-size: 25px;
+    color: #023265;
+    cursor: pointer;
+  }
+
+  .userlogout-btn .logoutbutton {
+    font-size: 25px;
+    color: darkred;
+    cursor: pointer;
+  }
+
+  .user-profile .username {
+    font-size: 17px;
+  }
+
+  .user-list .dashboardicons {
+    font-size: 25px;
+    color: black;
+    cursor: pointer;
+  } 
+}
+    
+  */
+
+
+
+@media only screen and (min-width:320px) and (max-width:768px) {
+  .sidebarmenu-btn{
+    display: block;
+  }
+
+  .user-profile .userlogout-btn{
+    display: none;
+  }
+
+  .user-profile .userheader{
+    position: absolute;
+    left: 1%;
+    font-size: 1rem;
+  }
 }
 
-.user-profile .userheader{
-  position: absolute;
-  left: 10%;
-  letter-spacing: 2px;
-  color: goldenrod;
-  font-variant: small-caps;
-  font-size:1.5rem ;
+@media only screen and (min-width:501px) and (max-width:768px){
+  .user-profile .userlogout-btn{
+    display: block;
+  }
+  .userlogout-btn .logo {
+    font-size: 22px;
+    color: #023265;
+    cursor: pointer;
+  }
+  
+  .userlogout-btn .logoutbutton {
+    font-size: 22px;
+    color: darkred;
+    cursor: pointer;
+  }
+  .user-profile .username {
+    font-size: 20px;
+  }
+  .user-profile .userheader{
+    position: absolute;
+    left: 1%;
+    font-size: 1.5rem;
+  }
 }
 
-.user-profile .userheader .caps{
-  font-weight: bold;
-  color: rgb(2, 2, 73);
-  font-size: 2rem;
-}
-
-.user-profile{
-background-color: rgb(239, 238, 238);
-}
-
-.userlogout-btn .logo{
-font-size: 25px;
-color:#023265 ;
-cursor: pointer;
-}
-
-.userlogout-btn .logoutbutton{
-font-size: 25px;
-color: darkred;
-cursor: pointer;
-}
-
-.user-profile .username{
-font-size: 17px;
-}
-
-.user-list .dashboardicons{
-font-size: 25px;
-color: black;
-cursor: pointer;
-}
-
-
-
+@media only screen and (min-width:769px) and (max-width:1024px) {
+  .sidebarmenu-btn{
+    display: none;
+  }
 
 }
