--- a/Insurance-app-main/src/Components/UserDashboard/User.css
+++ b/Insurance-app-main/src/Components/UserDashboard/User.css
@@ -1,6 +1,5 @@
-.user-containerform {
+.user-containerform{
     height: 100vh;
-    overflow-y: scroll;
 }
 
 .user-profile {
@@ -9,10 +8,8 @@
     width: 100%;
     padding: 20px;
     gap: 10px;
-    /* background:rgb(239, 238, 238); */
     position: fixed;
     left: 0;
-    z-index: 1000;
 }
 
 .userlogout-btn {
@@ -31,7 +28,7 @@
     position: relative;
     border-collapse:collapse;
     margin: auto;
-    width: 80%;
+    width: 100%;
     top: 15%;
     box-shadow: 1px 7px 15px gainsboro;
 }
@@ -60,7 +57,7 @@
     background:  rgb(221, 220, 220);
 }
 
-.user-btn {
+.userbtn .user-btn {
     background-color: rgb(3, 3, 86);
     color:white;
     width: 150px;
@@ -88,7 +85,6 @@
     cursor: pointer;
     display: inline-block;
     font-weight: bold;
-    transition: background 0.3s;
 }
 
 .user-headerpage {
@@ -108,10 +104,6 @@
 }
 
 @media screen and (max-width: 768px){
-    .user-containerform {
-        height: 100vh;
-        overflow-y: scroll;
-    }
     
     .user-table {
         position: relative;
@@ -174,7 +166,6 @@
         cursor: pointer;
         display: inline-block;
         font-weight: bold;
-        transition: background 0.3s;
     }
     
     .user-headerpage {
